# minigc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: build-check-test.yml
compiler/: Cargo.toml
compiler/src/: codegen.rs  lib.rs  names.rs
compiler/src/execution/: codegen.rs
compiler/src/runtime/: memory.rs  mod.rs
compiler/src/syntax/: expr.rs  fnc.rs  mod.rs  top.rs  ty.rs
compiler/tests/: basic.rs  loops.rs  memory.rs  structs.rs  variable.rs
syntax_derive/: Cargo.toml
syntax_derive/src/: lib.rs
