[workspace]
members = ["compiler", "syntax_derive"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Ivan Radicek <ivan.radicek@demiurg.hr>"]
edition = "2024"
repository = "https://github.com/demiurg-dev/minigc"
description = "Mini language with GC using Rust and LLVM"

[workspace.dependencies]
#anyhow = "1.0"
#clap = { version = "4.5.41", features = ["derive"] }
#expect-test = "1.5.1"
hashbrown = "0.15"
im = "15"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
itertools = "0.14.0"
#rand = { version = "0.8.5", features = ["std"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.140"
#strum = { version = "0.27.1", features = ["derive"] }
minigc-syntax-derive = { path = "syntax_derive" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "1"
#tracing = "0.1.41"
#tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
