[package]
name = "minigc-syntax-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
